[gd_scene load_steps=6 format=3 uid="uid://q6ypupt2b4s7"]

[ext_resource type="Script" path="res://resources/ui/question_screens/digital_to_clock_choice_question.gd" id="1_vg0hw"]
[ext_resource type="PackedScene" uid="uid://dpxld06johs05" path="res://resources/components/clock.tscn" id="2_oe3jl"]
[ext_resource type="Script" path="res://resources/nodes/clock_time_resource.gd" id="3_yo0r0"]
[ext_resource type="Theme" uid="uid://bdlvgyq3apvwb" path="res://resources/game_theme.tres" id="5_kpf1p"]

[sub_resource type="Resource" id="Resource_bgr85"]
script = ExtResource("3_yo0r0")
hour = 0
minute = 0

[node name="DigitalToClockChoiceQuestion" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_vg0hw")

[node name="QuestionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -266.5
offset_top = -252.5
offset_right = 266.5
offset_bottom = -207.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_kpf1p")
theme_override_font_sizes/font_size = 36
text = "นาฬิกาเรือนใดเวลาตรงกับเวลาที่แสดง"

[node name="QuestionTimeLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.0
offset_top = -192.0
offset_right = 79.0
offset_bottom = -115.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_kpf1p")
theme_override_font_sizes/font_size = 64
text = "12:00"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -536.0
offset_top = -75.0
offset_right = 536.0
offset_bottom = 230.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 24

[node name="VBoxContainerA" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="HBoxContainer/VBoxContainerA"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Clock" parent="HBoxContainer/VBoxContainerA/Control" instance=ExtResource("2_oe3jl")]
custom_minimum_size = Vector2(0, 300)
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 413.0
offset_bottom = 400.0
scale = Vector2(0.6, 0.6)
clock_time = SubResource("Resource_bgr85")
interactable = false

[node name="AnswerAButton" type="Button" parent="HBoxContainer/VBoxContainerA"]
layout_mode = 2
theme = ExtResource("5_kpf1p")
theme_override_font_sizes/font_size = 32
text = "ก"

[node name="VBoxContainerB" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="HBoxContainer/VBoxContainerB"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Clock" parent="HBoxContainer/VBoxContainerB/Control" instance=ExtResource("2_oe3jl")]
custom_minimum_size = Vector2(0, 300)
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 407.0
offset_bottom = 400.0
scale = Vector2(0.6, 0.6)
clock_time = SubResource("Resource_bgr85")
interactable = false

[node name="AnswerBButton" type="Button" parent="HBoxContainer/VBoxContainerB"]
layout_mode = 2
theme = ExtResource("5_kpf1p")
theme_override_font_sizes/font_size = 32
text = "ข"

[node name="VBoxContainerC" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="HBoxContainer/VBoxContainerC"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Clock" parent="HBoxContainer/VBoxContainerC/Control" instance=ExtResource("2_oe3jl")]
custom_minimum_size = Vector2(0, 300)
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 420.0
offset_bottom = 400.0
scale = Vector2(0.6, 0.6)
clock_time = SubResource("Resource_bgr85")
interactable = false

[node name="AnswerCButton" type="Button" parent="HBoxContainer/VBoxContainerC"]
layout_mode = 2
theme = ExtResource("5_kpf1p")
theme_override_font_sizes/font_size = 32
text = "ค"

[node name="VBoxContainerD" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="HBoxContainer/VBoxContainerD"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Clock" parent="HBoxContainer/VBoxContainerD/Control" instance=ExtResource("2_oe3jl")]
custom_minimum_size = Vector2(0, 300)
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 410.0
offset_bottom = 400.0
scale = Vector2(0.6, 0.6)
clock_time = SubResource("Resource_bgr85")
interactable = false

[node name="AnswerDButton" type="Button" parent="HBoxContainer/VBoxContainerD"]
layout_mode = 2
theme = ExtResource("5_kpf1p")
theme_override_font_sizes/font_size = 32
text = "ง"

[connection signal="pressed" from="HBoxContainer/VBoxContainerA/AnswerAButton" to="." method="_on_answer_a_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainerB/AnswerBButton" to="." method="_on_answer_b_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainerC/AnswerCButton" to="." method="_on_answer_c_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainerD/AnswerDButton" to="." method="_on_answer_d_button_pressed"]
